# robstride_actuator_bridge

./: CMakeLists.txt  README.md  package.xml
include/motor_control/: motor_config.h  robstride.h
include/robstride_actuator_bridge/: motor_config.h  robstride.h
launch/: motor_test.launch
msg/: MotorCommand.msg  MotorFeedback.msg  MotorTorqueCommand.msg
src/: motor_config.cpp  motor_control_test.cpp  robstride.cpp
