<?xml version="1.0"?>
<package format="2">
  <name>motor_control</name>
  <version>0.0.0</version>
  <description>The motor_control package</description>


  <maintainer email="shibo@todo.todo">shibo</maintainer>
  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>can_msgs</depend>

  

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  



</package>